# AIM-CPP

./: AIM.cpp  AIM.h  CMakeLists.txt  main.cpp
data/: adult-domain.json
mbi/: Clique.cpp  Clique.h  CliqueVector.cpp  CliqueVector.h  Dataset.cpp  Dataset.h  Domain.cpp  Domain.h  Factor.cpp  Factor.h  GraphicalModel.cpp  GraphicalModel.h  Inference.cpp  Inference.h  JunctionTree.cpp  JunctionTree.h  Measurement.h
util/: Graph.hpp  Json.hpp  Mechanism.hpp  common.h
